@@ -23,8 +23,7 @@
           <reg_user>
             <run>
               <copy>
-echo '%FWBPROMPT%';
-cat > %FWDIR%/%FWSCRIPT%;
+%FWDIR%
               </copy>
 
               <compression>
@@ -41,9 +40,7 @@ sudo -S %FWDIR%/%FWSCRIPT% &#38;&#38; (ps ax|awk '/shutdown/ &#38;&#38; !/awk/ {
 
             <test>
               <copy>
-echo '%FWBPROMPT%';
-mkdir -p %FWDIR%/tmp;
-cat > %FWDIR%/tmp/%FWSCRIPT%;
+%FWDIR%/tmp
               </copy>
 
               <rollback>
@@ -63,8 +60,7 @@ sudo -S %FWDIR%/tmp/%FWSCRIPT% &#38;&#38; echo 'Policy activated'
           <root>
             <run>
               <copy>
-echo '%FWBPROMPT%';
-cat > %FWDIR%/%FWSCRIPT%;
+%FWDIR%
               </copy>
 
               <compression>
@@ -79,9 +75,7 @@ sh %FWDIR%/%FWSCRIPT% &#38;&#38; (ps ax|awk '/shutdown/ &#38;&#38; \!/awk/ {prin
 
             <test>
               <copy>
-echo '%FWBPROMPT%';
-mkdir -p %FWDIR%/tmp;
-cat > %FWDIR%/tmp/%FWSCRIPT%;
+%FWDIR%/tmp
               </copy>
 
               <rollback>
